@@ -1,23 +1,23 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-DIST openttd-1.4.4-source.tar.gz 9726516 SHA256 e5b6b72e37b796ae8b532cd8c96bd27cb6c6b58ecc0e9a5a17a0a80442b5c36d SHA512 52ff5f52b511c3e222a0231c902b0763611f64d5c003c99e1c50af951688458c5c56bdc002ddd1e3c936ed920f64054e68074994fd273d2f3614a3779bad66e1 WHIRLPOOL dd7ac08a337df4554683f0f9275bb50cca169206b38f7ebfa20b6ec8a62125c8c38d444c78bd6a6230095a65e6e02b477fe8734d8b0e6ee9025008ed8058bbd8
+DIST openttd-1.5.0-beta2-source.tar.gz 9990964 SHA256 02717624402846e66c4d8ed19be12209ff7d6212db60860ab9e7a3bd24efc001 SHA512 2533087ea822dd21211d80c54cbc2cc4b1137f262a74e2dfb988bd81a3c2daacad6d7712d46050dc758c3d795dca201194940c1666c3cb9459376937f9f37e5e WHIRLPOOL da1269facb3f1593486322ca2fcef8c42ab70c7fa0f99f291173e4b41cd82380fc00b0ef36aaa299850bd06b7ca69123e57a27824596b1548f404a1aec56aac7
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQJ8BAEBCABmBQJUWf1eXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+iQJ8BAEBCABmBQJVBqeoXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
 ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ0NEM5MDM0MjM5MkNDRUI1NUFEQjYyMTIy
-RjA0RTMxRjA3MjAxRTdEAAoJEC8E4x8HIB59L98QAKhLNP387rHlfKqo2VmnT+NS
-3L/PXSDsr+0IXx4g4YXR2VuKHiEEmTlalhgOo7uPfNOaAJwA2rNluI07NKaLJEHV
-TFUmNAoq0RTNRjoHnkheZE2TvddQHxfZib7MvWpwWVOTHmkslkV9XZqi0EeXgnwh
-SXeZPGnBBjWFxzfDvcHb5F/gIjnM7h5+P8JhB9QaM6ipSjs0OJ8lGEezBwC7SPS6
-ZVpGOq0h1nYOvNCBQcbSLerUseU6k4hI5wfYJwkfkaCDmVVIGKf01QvdH0/ylJvm
-cFSmb9KtgchnYsR73bTGeBcWOFAr9ZMN4bsZg1U0M+KDq91Fwk/ZGnYeVqUtw8E2
-TnBXYywg8UTCWVcGbSCfO66BXYHb6L5JNpQss9mRIhHk1VHsSnXur190DtDEwX2p
-rzyUstUENhAk1HWmGKN+baz73btJLHx3+0jbtO5cKf9HUBwpNpfbVlGaMhhFgzka
-gj7HJiQq1WGvA4/qisBc14qhi49HE/QWTAut8mv1ADm4nED0bJJ+MtyYq5uOrF/Q
-SVqa/EZxXPcLYcSnS6tcmHCyWlZVcASU1GeK+qwFEn8sHQcVn9ufVmGv0yHxqvM7
-gq0MHzPwojGqnUz20WiDVJNgbJjsQAb/UE3e0i4GLt68la42ndbdZF+UwilXKp1U
-UYAXxoWExtPEIproSM/Y
-=lLEo
+RjA0RTMxRjA3MjAxRTdEAAoJEC8E4x8HIB59/zkP/3gCPOb850jEZ8jcfJ1epd6I
+WyBARzDG6uFabVZb/HPSN5SnNKkrTXsFZ+E7YlRxMVpmhT2R4jdjj537dzjiYvcS
+zHelZy3WRaa1xpH23HYijdvz/NvFR9XA8zKOBC0+rD4v1z66SyVz9v2hJFNQxlpO
+f6zCST1RTxMjnCTHTi8mMFqWaYJLZ9nhT7jX/CErkcYtKx8ujiLHcuKETOBrRmrE
+s1d5UNL/dGmVHPao//DtTlwOOGY+h31ZrXf7GA/8DYN1nT2UowsK06PX5c54OcGS
+w52fxxgQ3Zmk0S89UGptgRla1AqlZZLkQSDVa8KJ6xBK45s2cBg5EsVFjsMz759w
+2ODDLxgflZSCFbgXp1IBLtyvNfImOhCSmuDPFWxzMzZhgNoPJtmTPDi6bxMFnRxt
+0cnmmcd+O9OX7GRu7sV8H8bc4nouKFWdtq1pT1Mu/tmu2UyHkBFezxXbwSYE6mM5
+LWv92o5ePHo6hBbtZIwhJx56z64uVjzD04k/klVcFmQ36UUfgxi+sREFZD+KQrEz
+YUh5AF6ibVdCTo+Y0cJFUTJrNHYEXRsdDLGZw1S8vPWPLHAJyuUQPqaWV/IcTn1W
+Y6jKg+x8h+ziHHgVQMIA5HAy37zXkUlRQmwe5FWS8LrohWF9YUX9CwADFqggfQaJ
+D+h0Qpudd9OBvqzQmGlJ
+=73jd
 -----END PGP SIGNATURE-----
