@@ -9,6 +9,7 @@
 		<flag name='aplaymidi'>Enables midi music in game, using aplaymidi as an external player</flag>
 
 		<flag name='openmedia'>Enables the free open media sets: OpenGFX, OpenSFX, OpenMSX, removing the requirement for proprietary TTD assets to play OpenTTD.</flag>
+		<flag name='lzma'>Enables LZMA compression for savegames. This is the default for new savegames.</flag>
 		<flag name='lzo'>Enables LZO compression for savegames. This is only needed to load extremely old savegames. (versions before 0.2)</flag>
 		<flag name='dedicated'>Build only the openttd server, and not the client.</flag>
 	</use>
