@@ -1,4 +1,4 @@
-# Copyright 1999-2014 Gentoo Foundation
+# Copyright 1999-2015 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
 # $Header: $
 
@@ -12,29 +12,30 @@ ESVN_REPO_URI="svn://svn.openttd.org/trunk"
 LICENSE="GPL-2"
 SLOT="0"
 KEYWORDS=""
-IUSE="aplaymidi debug dedicated doc iconv icu lzo +openmedia +png +timidity
-	+truetype +zlib"
+IUSE="aplaymidi debug dedicated doc iconv icu +lzma lzo +openmedia +png
+	threads +timidity +truetype +zlib cpu_flags_x86_sse"
 REQUIRED_USE="
 	aplaymidi? ( !timidity )
 	timidity? ( !aplaymidi )
 	png? ( zlib )
 	!dedicated? (
 		truetype? ( zlib )
-	) "
+	)"
 RESTRICT="test"
 
 COMMON_DEPS="
 	!dedicated? (
 		media-libs/libsdl[sound,X,video]
-		icu? ( dev-libs/icu )
+		icu? ( dev-libs/icu:= )
 		truetype? (
 			media-libs/fontconfig
 			media-libs/freetype:2
 		)
 	)
 	lzo? ( dev-libs/lzo:2 )
+	lzma? ( app-arch/xz-utils )
 	iconv? ( virtual/libiconv )
-	png? ( media-libs/libpng )
+	png? ( media-libs/libpng:= )
 	zlib? ( sys-libs/zlib )"
 DEPEND="
 	${COMMON_DEPS}
@@ -55,6 +56,9 @@ RDEPEND="
 src_prepare() {
 	subversion_src_prepare
 
+	# fix buggy desktop entry
+	sed -e 's/^\(Keywords=.*\)$/\1;/' -i media/openttd.desktop.in || die
+
 	# fix to help the automatic revision detection
 	echo "r${ESVN_WC_REVISION}	${ESVN_WC_REVISION}	0	r${ESVN_WC_REVISION}" \
 		> "${S}/.ottdrev"
@@ -71,6 +75,7 @@ src_configure() {
 		use aplaymidi && myopts="${myopts} --with-midi='/usr/bin/aplaymidi'"
 		myopts="${myopts}
 			$(use_with truetype freetype)
+			$(use_with truetype fontconfig)
 			$(use_with icu)
 			--with-sdl"
 	fi
@@ -93,9 +98,12 @@ src_configure() {
 		--without-libtimidity \
 		${myopts} \
 		$(use_with iconv) \
-		$(use_with png) \
+		$(use_with lzma liblzma) \
 		$(use_with lzo liblzo2) \
+		$(use_with png) \
+		$(use_with threads) \
 		$(use_with zlib) \
+		$(use_with cpu_flags_x86_sse sse) \
 		|| die
 }
 
