@@ -1,3 +1,10 @@
+*openttd-1.5.0_beta2 (16 Mar 2015)
+
+  16 Mar 2015; Hendrik v. Raven (lorem_ipsum) <hendrik@consetetur.de>
+  +openttd-1.5.0_beta2.ebuild, -openttd-1.4.4.ebuild, metadata.xml,
+  openttd-9999.ebuild:
+  games-simulation-openttd: version bump
+
 *openttd-1.4.4 (05 Nov 2014)
 
   05 Nov 2014; Hendrik v. Raven (lorem_ipsum) <hendrik@consetetur.de>
